--- a/CSS/main.css
+++ b/CSS/main.css
@@ -28,6 +28,7 @@ color:#e74c3c;
     background-position: 0px; }
 .headd h2{
 color:#2c3e50;
+font-size: 50px;
 }
 
 .pg2{
@@ -52,7 +53,7 @@ color:#2c3e50;
 #act{
 
   background: #9b59b6;
-  padding: 35px;
+  padding: 1px;
 }
 .pg3{
     background-color: #9b59b6; 
@@ -71,7 +72,7 @@ color:#2c3e50;
 #war{
 
   background: #e74c3c;
-  padding: 35px;
+  padding: 5px;
 }
 .pg4{
     background-color: #e74c3c; 
