--- a/CSS/main.css
+++ b/CSS/main.css
@@ -135,8 +135,12 @@ text-align: center;
 background-size: cover;
 background-position: center;
 background-attachment: fixed;
-padding-top: 1px;
-padding-bottom: 1px;
+padding:5%;
+}
+
+#any{
+  background: #2ecc71;
+  padding: 5px;
 }
 a:hover{
 color: rgb(204,24,30);
